--- a/package.json
+++ b/package.json
@@ -35,4 +35,9 @@
   "author": "",
   "license": "ISC",
   "description": ""
+} 
+"scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
 }
+
