--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dis
+    
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -36,8 +42,9 @@
   "license": "ISC",
   "description": ""
 } 
+"homepage": "https://ikhwannursidiq.github.io/projectLP",
+
 "scripts": {
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
 }
 
