--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "build": "vite build",
   "preview": "vite preview",
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d dis
+  "deploy": "gh-pages -d dis"
     
   },
   "dependencies": {
